ui: collapse and expand files Fixes #182

--- a/ui/assets/css/hound.css
+++ b/ui/assets/css/hound.css
@@ -219,6 +219,16 @@ button:focus {
   margin-right: 10px;
 }
 
+#result > .actions {
+  padding: 5px 0 30px 0;
+}
+
+#result > .actions > button {
+  margin: 2px;
+  float: right;
+  background-color: #f5f5f5;
+  color: #666;
+}
 .repo {
   margin-bottom: 100px;
 }
@@ -227,6 +237,7 @@ button:focus {
   color: #767676;
   font-size: 24px;
   padding-bottom: 5px;
+  cursor: pointer;
 }
 
 .repo > .title > .name {
@@ -236,6 +247,11 @@ button:focus {
 .repo > .title > .octicon-repo {
   color: #bbb;
   margin-right: 10px;
+}
+
+.repo > .title > .indicator {
+  vertical-align: text-top;
+  padding-left: 10px;
 }
 
 .files > .moar {
@@ -250,11 +266,16 @@ button:focus {
   border: 1px solid #d8d8d8;
 }
 
+.file.closed {
+  margin: 10px 0 0 0;
+}
+
 .file > .title {
   padding: 10px 10px 10px 20px;
   display: block;
   line-height: 30px;
   background-color: #f5f5f5;
+  cursor: pointer;
 }
 
 .title a {
@@ -264,6 +285,14 @@ button:focus {
 .file-body {
   /* Allow horizontal scrolling in code, similar to github.com */
   overflow: auto;
+}
+
+.file.closed > .file-body {
+  display: none;
+}
+
+.file.open > .file-boby {
+  display: block;
 }
 
 .match {
